--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^18.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-time-picker-input": "^2.0.10",
     "web-vitals": "^2.1.4"
